src/app/mainpage/mainpage.component.css
html {
    min-height: 100%;
    height: auto;
}

body {
    padding: 10%;
    background: rgb(10,27,103);
    background: linear-gradient(75deg, rgba(10,27,103,1) 0%, rgba(92,37,186,1) 50%, rgba(59,173,217,1) 100%) no-repeat center center fixed;
    background-size: cover;
    font-family: 'Roboto', Arial, Helvetica, sans-serif;
}

.whiteRoundedBlock{
    background-color: whitesmoke;
    padding: 3%;
    border-radius: 5vmin;
    padding: 3vmin;
}

.topbottomLine {
    padding-top: 5vmin;
    padding-bottom: 5vmin;
    border-top: whitesmoke 2px solid;
    border-bottom: whitesmoke 2px solid;
    vertical-align: middle;
    align-content: center;
}

.bottomLine {
    padding-top: 5vmin;
    padding-bottom: 5vmin;
    border-bottom: whitesmoke 2px solid;
    vertical-align: middle;
    align-content: center;
}

.noLine{
    padding-top: 5vmin;
    padding-bottom: 5vmin;
    vertical-align: middle;
    align-content: center;
}

#mainTxt{
    margin-top: 2vmin;
    display: inline-block;
    position: relative;
    top: 50%;
    transform: translateY(-50%);
    text-align: justify;
}

.col-sm {
    text-align: center;
}

mdb-card {
    border-bottom-left-radius: 5vmin;
    border-bottom-right-radius: 5vmin;
    margin: 1.5vmin;
}

mdb-card-text {
    text-align: left;
}

mdb-card-img {
    padding: 2.5px;
}

h1 {
    color: whitesmoke;
    font-size: 5vmin;
}

.right {
    text-align: right;
}

#mailus {
    color: whitesmoke;
    font-size: 15vmin;
}

.whitebckg {
    background-color: transparent;
    color: white;
}

#logotext{
    font-family: Calibri, sans-serif;
    text-align: left;
    position: relative;
    top: 50%;
    transform: translateY(-50%);
}

/* Flex */

@media (max-width: 950px) {
    body {
        padding-top: 20%;
    }

}

